@@ -18,7 +18,7 @@
 	<description>Um projeto para totens de auto atendimento em farmácias.</description>
 
 	<properties>
-		<java.version>17</java.version>
+		<java.version>22</java.version>
 		<springdoc.version>2.1.0</springdoc.version> <!-- Propriedade para o SpringDoc -->
 	</properties>
 
@@ -95,6 +95,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>22</source>
+					<target>22</target>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
